# hiking-weather

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .cache.sqlite  Dockerfile  alembic.ini  mock_openmeteo.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  forecast.py  profile.py
backend/app/core/: auth.py  config.py  tokens.py
backend/app/db/: models.py  session.py
backend/app/routes/: weather.py
backend/app/schemas/: forecast.py  profile.py
backend/app/seeds/: __init__.py
backend/app/services/: climatology.py  openmeteo.py  recommend.py  scoring.py  weather_service.py
backend/hikecast_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_forecast.py  test_scoring.py
docs/decisions/: DECISIONS.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppShell.tsx  AuthModal.tsx  SearchBox.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx
frontend/src/features/auth/: useAuth.ts
frontend/src/features/forecast/: DayCard.tsx  useForecast.ts
frontend/src/i18n/: en.json  index.ts  ro.json
frontend/src/lib/: api.ts
frontend/src/pages/: ForecastPage.tsx
frontend/src/types/: api.ts
