[project]
name = "hikecast-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "geoalchemy2>=0.15",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi-users[sqlalchemy]>=13.0",
    "pwdlib[argon2]>=0.2",
    "httpx>=0.27",
    "tenacity>=8.5",
    "apscheduler>=3.10",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "types-passlib",
]

# ── Ruff (linter + formatter, replaces flake8/black/isort) ─────────────────
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

# ── Mypy (static type checker) ──────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
